--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Seismic Simulator - Final Version</title>
+  <title>Seismic Simulator</title>
   <style>
     html, body {
       margin: 0;
