--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
       if (drawTool === 'pen' || drawTool === 'eraser') {
         paint(x, y); isDrawing = true;
       } else if (drawTool === 'origin') {
+        if (borders[y][x] === 1) return;
         originX = x; originY = y;
         document.getElementById("startSim").style.display = 'inline-block';
       }
@@ -225,7 +226,10 @@
 
     function paint(x, y) {
       if (x >= 0 && x < cols && y >= 0 && y < rows) {
-        if (drawTool === 'pen') borders[y][x] = 1;
+        if (drawTool === 'pen') {
+          if (x === originX && y === originY) return;
+          borders[y][x] = 1;
+        }
         else if (drawTool === 'eraser') {
           borders[y][x] = 0;
           if (x === originX && y === originY) {
