--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     for (var y = 0; y < rows; y++) {
       pWaveDisplacement[y] = new Float32Array(cols);
       sWaveDisplacement[y] = new Float32Array(cols);
-      pWaveConstantVelocity[y] = new Float32Array(cols);
+      pWaveVelocity[y] = new Float32Array(cols);
       sWaveVelocity[y] = new Float32Array(cols);
       borders[y] = new Uint8Array(cols);
     }
