--- a/index.html
+++ b/index.html
@@ -81,20 +81,20 @@
     const fixedDt = 0.01;
     const pWaveConstantVelocity = 6.0, sWaveConstantVelocity = 3.5;
 
-    let cellWidth, cellHeight;
+    var cellWidth, cellHeight;
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
     cellWidth = canvas.width / cols;
     cellHeight = canvas.height / rows;
 
-    let simRunning = false;
-    let drawTool = 'pen';
-    let isDrawing = false;
-    let originX = null, originY = null;
-    let storedMag = 5.0;
+    var simRunning = false;
+    var drawTool = 'pen';
+    var isDrawing = false;
+    var originX = null, originY = null;
+    var storedMag = 5.0;
 
     const pWaveDisplacement = [], sWaveDisplacement = [], pWaveVelocity = [], sWaveVelocity = [], borders = [];
-    for (let y = 0; y < rows; y++) {
+    for (var y = 0; y < rows; y++) {
       pWaveDisplacement[y] = new Float32Array(cols);
       sWaveDisplacement[y] = new Float32Array(cols);
       pWaveVelocity[y] = new Float32Array(cols);
@@ -103,7 +103,7 @@
     }
 
     function resetFields() {
-      for (let y = 0; y < rows; y++) {
+      for (var y = 0; y < rows; y++) {
         pWaveDisplacement[y].fill(0);
         sWaveDisplacement[y].fill(0);
         pWaveVelocity[y].fill(0);
@@ -122,17 +122,17 @@
 
     function drawGrid() {
       ctx.strokeStyle = 'rgba(255,255,255,0.05)';
-      for (let x = 0; x <= cols; x++) {
+      for (var x = 0; x <= cols; x++) {
         ctx.beginPath(); ctx.moveTo(x * cellWidth, 0); ctx.lineTo(x * cellWidth, canvas.height); ctx.stroke();
       }
-      for (let y = 0; y <= rows; y++) {
+      for (var y = 0; y <= rows; y++) {
         ctx.beginPath(); ctx.moveTo(0, y * cellHeight); ctx.lineTo(canvas.width, y * cellHeight); ctx.stroke();
       }
     }
 
     function drawWaves() {
-      for (let y = 0; y < rows; y++) {
-        for (let x = 0; x < cols; x++) {
+      for (var y = 0; y < rows; y++) {
+        for (var x = 0; x < cols; x++) {
           if (borders[y][x]) continue;
 
           const p = pWaveDisplacement[y][x];
@@ -155,8 +155,8 @@
 
     function drawBorders() {
       ctx.fillStyle = "#00f";
-      for (let y = 0; y < rows; y++) {
-        for (let x = 0; x < cols; x++) {
+      for (var y = 0; y < rows; y++) {
+        for (var x = 0; x < cols; x++) {
           if (borders[y][x]) ctx.fillRect(x * cellWidth, y * cellHeight, cellWidth, cellHeight);
         }
       }
@@ -166,8 +166,8 @@
       const scaleVp = (pWaveConstantVelocity * dt / kmPerCell) ** 2;
       const scaleVs = (sWaveConstantVelocity * dt / kmPerCell) ** 2;
 
-      for (let y = 1; y < rows - 1; y++) {
-        for (let x = 1; x < cols - 1; x++) {
+      for (var y = 1; y < rows - 1; y++) {
+        for (var x = 1; x < cols - 1; x++) {
           if (borders[y][x]) continue;
           const lapV = pWaveDisplacement[y][x+1] + pWaveDisplacement[y][x-1] + pWaveDisplacement[y+1][x] + pWaveDisplacement[y-1][x] - 4 * pWaveDisplacement[y][x];
           const lapH = sWaveDisplacement[y][x+1] + sWaveDisplacement[y][x-1] + sWaveDisplacement[y+1][x] + sWaveDisplacement[y-1][x] - 4 * sWaveDisplacement[y][x];
@@ -178,8 +178,8 @@
         }
       }
 
-      for (let y = 0; y < rows; y++) {
-        for (let x = 0; x < cols; x++) {
+      for (var y = 0; y < rows; y++) {
+        for (var x = 0; x < cols; x++) {
           if (borders[y][x]) {
             pWaveVelocity[y][x] *= -0.5;
             sWaveVelocity[y][x] *= -0.5;
@@ -191,8 +191,8 @@
     }
 
     // Main loop with delta time
-    let lastTimestamp = performance.now();
-    let accumulated = 0;
+    var lastTimestamp = performance.now();
+    var accumulated = 0;
     function gameLoop(timestamp) {
       const delta = (timestamp - lastTimestamp) / 1000;
       lastTimestamp = timestamp;
@@ -261,8 +261,8 @@
 
     function injectEarthquake(mag) {
       const r = 3;
-      for (let dy = -r; dy <= r; dy++) {
-        for (let dx = -r; dx <= r; dx++) {
+      for (var dy = -r; dy <= r; dy++) {
+        for (var dx = -r; dx <= r; dx++) {
           const ix = originX + dx;
           const iy = originY + dy;
           if (ix >= 0 && ix < cols && iy >= 0 && iy < rows) {
